@@ -1,0 +1,21 @@
+# Generated by Django 3.0a1 on 2019-10-15 20:08
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('Application', '0001_initial'),
+    ]
+
+    operations = [
+        migrations.CreateModel(
+            name='Country',
+            fields=[
+                ('Id', models.AutoField(primary_key=True, serialize=False)),
+                ('Country_Code', models.CharField(max_length=10)),
+                ('Country_Name', models.CharField(max_length=50)),
+            ],
+        ),
+    ]
