@@ -1,0 +1,16 @@
+# Generated by Django 3.0a1 on 2019-10-15 21:15
+
+from django.db import migrations
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('Application', '0004_remove_currency_symbol'),
+    ]
+
+    operations = [
+        migrations.DeleteModel(
+            name='Currency',
+        ),
+    ]
