@@ -1,0 +1,21 @@
+# Generated by Django 3.0a1 on 2019-10-15 21:37
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('Application', '0005_delete_currency'),
+    ]
+
+    operations = [
+        migrations.CreateModel(
+            name='Currency',
+            fields=[
+                ('Id', models.AutoField(primary_key=True, serialize=False)),
+                ('Code', models.CharField(max_length=10)),
+                ('Name', models.CharField(max_length=50)),
+            ],
+        ),
+    ]
