@@ -1,0 +1,22 @@
+# Generated by Django 3.0a1 on 2019-10-15 22:04
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('Application', '0006_currency'),
+    ]
+
+    operations = [
+        migrations.CreateModel(
+            name='PhoneCode',
+            fields=[
+                ('Id', models.AutoField(primary_key=True, serialize=False)),
+                ('Country_Name', models.CharField(max_length=100)),
+                ('ISO_Code', models.CharField(max_length=10)),
+                ('ISD_Code', models.PositiveSmallIntegerField()),
+            ],
+        ),
+    ]
