@@ -1,0 +1,18 @@
+# Generated by Django 3.0a1 on 2019-10-15 22:08
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('Application', '0007_phonecode'),
+    ]
+
+    operations = [
+        migrations.AlterField(
+            model_name='phonecode',
+            name='ISD_Code',
+            field=models.CharField(max_length=10),
+        ),
+    ]
